ajustei a chamada da função Locale para Locale.of para se adequar ao java 21