@@ -240,7 +240,7 @@ public class AlterarSocioController {
         campoDepartamentosSocio.setFocusTraversable(false);
 
         //configura para que a data do seletor de datas fique em português
-        Locale.setDefault(new Locale("pt", "BR"));
+        Locale.setDefault(Locale.of("pt", "BR"));
         campoNascimentoSocio.setConverter(new StringConverter<LocalDate>() {
             public String toString(LocalDate date) {
                 return (date != null) ? formatoData.format(date) : "";
